--- a/client/client.css
+++ b/client/client.css
@@ -33,5 +33,8 @@ div.button span {
 	font-size: 30vh;
 	top: 50%;
 	left: 50%;
+	height: 30vh;
+	line-height: 30vh;
+	width: 30vh;
 	margin: -15vh 0 0 -15vh;
 }
