--- a/display/display.css
+++ b/display/display.css
@@ -12,38 +12,53 @@ body {
 
 body {
 	margin: 0;
+	background: #000;
+	color: #fff;
 }
 
 #playground {
 	height: 100%;
-	background: #000;
+	overflow: hidden;
 }
 
 #divider {
 	position: absolute;
 	left: 50%;
 	height: 100%;
-	width: 30px;
-	margin-left: -15px;
+	width: 2vw;
+	margin-left: -1vw;
 	background: #fff;
 }
 
 div.ball {
 	position: relative;
-	background: #fff;
-	width: 50px;
-	height: 50px;
-	border-radius: 25px;
+	background: red;
+	width: 2vw;
+	height: 2vw;
+	border-radius: 1vw;
 }
 
 div.player {
 	position: absolute;
-	width: 20px;
-	height: 10vh;
-	margin-top: -5vh;
 	background: #fff;
 }
 
-#player_1 {
-	margin-left: -20px;
+div.player_label {
+	position: absolute;
+	top: 0;
+	font-size: 5vw;
+	width: 50%;
+	text-align: center;
+}
+
+#player_label_1 {
+	left: 50%;
+}
+
+#connection_lost {
+	position: absolute;
+	top: 15%;
+	width: 100%;
+	font-size: 15vw;
+	text-align: center;
 }
