Displays winner of game

--- a/display/display.css
+++ b/display/display.css
@@ -84,3 +84,16 @@ div.player_label {
 	background: #000;
 	padding: 5px;
 }
+
+#winner {
+	position: absolute;
+	left: 50%;
+	top: 20%;
+	width: 60vw;
+	margin-left: -30vw;
+	font-size: 5vw;
+	text-align: center;
+	background: #000;
+	border: 1px solid #fff;
+	padding: 10px 0;
+}
